--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -170,6 +170,7 @@
         <EditText
             android:id="@+id/emailNameEdit"
             android:layout_width="match_parent"
+            android:inputType="textEmailAddress"
             android:layout_height="wrap_content"
             android:layout_weight=".40"
             android:hint="@string/email"
