--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -21,6 +21,12 @@
     android:layout_height="wrap_content"></TextView>
 
     <TextView
+        android:id="@+id/itemId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/description"
         android:hint="Description"
         android:textSize="20dp"
@@ -37,9 +43,10 @@
         android:id="@+id/price"
         android:hint="Price"
         android:textSize="20dp"
-        android:gravity="left"
+        android:gravity="right"
         android:paddingLeft="50px"
         android:layout_toEndOf="@id/imageView"
+        android:layout_marginEnd="50dp"
         android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_below="@id/description"
@@ -67,6 +74,7 @@
         android:maxHeight="150dp"
         android:maxWidth="150dp"
         tools:srcCompat="@tools:sample/avatars" />
+
 
 
 </RelativeLayout>
