--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,10 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ScrollView
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+        android:layout_marginBottom="200px">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +31,16 @@
         android:layout_marginTop="250px"
         android:id="@+id/itemList"
         android:orientation="vertical"></LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/uploadItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_item"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
+        />
 
 
 
