--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -87,16 +87,45 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="15dp"
-        android:maxWidth="50dp"
-        android:maxHeight="50dp"
-        android:layout_marginStart="25dp"
-        android:adjustViewBounds="true"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_below="@id/imgTxt"
+        android:id="@+id/placeholderMoreImgs"
+
+        android:layout_width="300px"
+        android:layout_height="wrap_content" />
+
+
+    <Button
+        android:id="@+id/publishImg"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:text="@string/upload_imgs"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="250dp"
+        android:layout_below="@+id/imgTxt"/>
+
+    <Button
+        android:id="@+id/submitImgBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_above="@+id/gobackBtn"
+        />
+
+    <Button
+        android:id="@+id/gobackBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/goback"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
